<resources>

    <!-- General -->
    <string name="app_name">Ragdoll</string>

    <!-- Activity Home -->
    <string name="home_title">Home</string>

    <!-- Data management Activity/Fragment -->
    <!-- Towels -->
    <string name="no_towels">No towels to show :(</string>
    <string name="success_remove_towel">Towels removed successfuly</string>
    <string name="success_add_edit_towel">Towel saved successfuly</string>
    <!-- Clients -->
    <string name="no_clients">No clients to show :(</string>
    <string name="success_remove_client">Clients removed successfuly</string>
    <string name="success_add_edit_client">Client saved successfuly</string>
    <!-- Transactions -->
    <string name="no_transactions">No transactions to show :(</string>
    <string name="success_remove_transaction">Transactions removed successfuly</string>
    <string name="success_add_edit_transaction">Transaction saved successfuly</string>
    <!-- Bottom Navigation Bar -->
    <string name="bot_nav_towels">Towels</string>
    <string name="bot_nav_clients">Clients</string>
    <string name="bot_nav_transactions">Transactions</string>

    <!-- AddEdit Activity/Fragment -->
    <string name="confirm_add_edit">Confirm</string>
    <!-- Towels -->
    <string name="invalid_towel_data">Invalid towel data</string>
    <!-- Clients -->
    <string name="invalid_client_data">Invalid client data</string>
    <!-- Transactions -->
    <string name="invalid_transaction_data">Invalid transaction data</string>

    <!-- Models -->
    <!-- Towels -->
    <string name="field_towel_type">Type</string>
    <string name="field_towel_available">Available</string>
    <string name="field_towel_amount">Amount</string>
    <string name="field_towel_type_as_label">Type:</string>
    <string name="field_towel_available_as_label">Available:</string>
    <string name="field_towel_amount_as_label">Amount:</string>
    <!-- Clients -->
    <string name="field_client_name">Name</string>
    <string name="field_client_address">Address</string>
    <string name="field_client_phone">Phone</string>
    <string name="field_client_email">Email</string>
    <string name="field_client_towel_price">Towel Price</string>
    <string name="field_client_balance">Balance</string>
    <!-- Transactions -->
    <string name="field_transaction_description">Description</string>
    <string name="field_transaction_cost">Cost</string>
    <string name="field_transaction_category">Category</string>

</resources>
