<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:id="@+id/et_client_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/field_client_name"
            android:hint="@string/field_client_name"
            android:inputType="text"
    />

    <EditText
            android:id="@+id/et_client_address"
            app:layout_constraintTop_toBottomOf="@id/et_client_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/field_client_address"
            android:hint="@string/field_client_address"
            android:inputType="text"
    />

    <EditText
            android:id="@+id/et_client_phone"
            app:layout_constraintTop_toBottomOf="@id/et_client_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/field_client_phone"
            android:hint="@string/field_client_phone"
            android:inputType="phone"
    />

    <EditText
            android:id="@+id/et_client_email"
            app:layout_constraintTop_toBottomOf="@id/et_client_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/field_client_email"
            android:hint="@string/field_client_email"
            android:inputType="textEmailAddress"
    />

    <EditText
            android:id="@+id/et_client_towel_price"
            app:layout_constraintTop_toBottomOf="@id/et_client_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/field_client_towel_price"
            android:hint="@string/field_client_towel_price"
            android:inputType="numberDecimal"
    />

    <EditText
            android:id="@+id/et_client_balance"
            app:layout_constraintTop_toBottomOf="@id/et_client_towel_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/field_client_balance"
            android:hint="@string/field_client_balance"
            android:inputType="numberDecimal"
    />

    <!-- TODO: TOWEL LIST -->

</androidx.constraintlayout.widget.ConstraintLayout>