<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:id="@+id/et_transaction_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/field_transaction_description"
            android:hint="@string/field_transaction_description"
            android:inputType="text"
    />

    <EditText
            android:id="@+id/et_transaction_cost"
            app:layout_constraintTop_toBottomOf="@id/et_transaction_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/field_transaction_cost"
            android:hint="@string/field_transaction_cost"
            android:inputType="numberDecimal"
    />

    <EditText
            android:id="@+id/et_transaction_category"
            app:layout_constraintTop_toBottomOf="@id/et_transaction_cost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/field_transaction_category"
            android:hint="@string/field_transaction_category"
            android:inputType="text"
    />

</androidx.constraintlayout.widget.ConstraintLayout>