<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tv_item_towel_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/SelectableItemList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_item_towel_name_label"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/field_towel_type_as_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_item_towel_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tv_item_towel_name_label"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_item_towel_amount_label"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/field_towel_amount_as_label"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_item_towel_name_label" />

            <TextView
                android:id="@+id/tv_item_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@id/tv_item_towel_amount_label"
                app:layout_constraintTop_toBottomOf="@id/tv_item_towel_name" />

            <TextView
                android:id="@+id/tv_item_towel_available_label"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/field_towel_available_as_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_item_towel_amount_label" />

            <TextView
                android:id="@+id/tv_item_towel_available"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tv_item_towel_available_label"
                app:layout_constraintTop_toBottomOf="@id/tv_item_amount" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>